RESOLVED FIXED224085
REGRESSION (r274460?): Infinite recursion on fullscreen/full-screen-remove-ancestor.html in WTR::InjectedBundlePage::closeFullScreen
https://bugs.webkit.org/show_bug.cgi?id=224085
Summary REGRESSION (r274460?): Infinite recursion on fullscreen/full-screen-remove-an...
Ryan Haddad
Reported 2021-04-01 15:49:29 PDT
fullscreen/full-screen-remove-ancestor.html appears to have become a flaky crash on macOS bots. It seems that this may have started after https://trac.webkit.org/changeset/274460/webkit landed Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libsystem_trace.dylib 0x00007fff200b4ac5 0x7fff200ad000 + 31429 1 libsystem_trace.dylib 0x00007fff200b47d2 0x7fff200ad000 + 30674 2 libsystem_trace.dylib 0x00007fff200b4727 0x7fff200ad000 + 30503 3 libsystem_trace.dylib 0x00007fff200b2a4e 0x7fff200ad000 + 23118 4 libsystem_trace.dylib 0x00007fff200b2054 0x7fff200ad000 + 20564 5 libsystem_trace.dylib 0x00007fff200b1fa9 0x7fff200ad000 + 20393 6 com.apple.WebCore 0x000000010a85ba00 void WTF::Logger::log<WTF::Logger::LogSiteIdentifier, char [41]>(WTFLogChannel&, WTFLogLevel, WTF::Logger::LogSiteIdentifier const&, char const (&) [41]) + 256 (Logger.h:316) 7 com.apple.WebCore 0x000000010b7f84a8 error<WTF::Logger::LogSiteIdentifier, char [41]> + 34 (Logger.h:154) [inlined] 8 com.apple.WebCore 0x000000010b7f84a8 WebCore::FullscreenManager::willExitFullscreen() + 440 (FullscreenManager.cpp:465) 9 com.apple.WebKit 0x0000000108932492 WebKit::WebFullScreenManager::willExitFullScreen() + 64 (WebFullScreenManager.cpp:208) 10 com.apple.WebKitTestRunner.InjectedBundle 0x0000000772dc390e WTR::InjectedBundlePage::closeFullScreen(OpaqueWKBundlePage const*) + 108 (InjectedBundlePage.cpp:1802) 11 com.apple.WebKitTestRunner.InjectedBundle 0x0000000772dc390e WTR::InjectedBundlePage::closeFullScreen(OpaqueWKBundlePage const*) + 108 (InjectedBundlePage.cpp:1802) 12 com.apple.WebKitTestRunner.InjectedBundle 0x0000000772dc390e WTR::InjectedBundlePage::closeFullScreen(OpaqueWKBundlePage const*) + 108 (InjectedBundlePage.cpp:1802) 13 com.apple.WebKitTestRunner.InjectedBundle 0x0000000772dc390e WTR::InjectedBundlePage::closeFullScreen(OpaqueWKBundlePage const*) + 108 (InjectedBundlePage.cpp:1802) https://results.webkit.org/?suite=layout-tests&test=fullscreen%2Ffull-screen-remove-ancestor.html
Attachments
crash log (166.88 KB, text/plain)
2021-04-01 15:49 PDT, Ryan Haddad
no flags
Updated Test Expectations (1.65 KB, patch)
2021-07-07 10:25 PDT, Eric Hutchison
no flags
Patch (4.38 KB, patch)
2021-07-29 21:27 PDT, Jean-Yves Avenard [:jya]
no flags
Ryan Haddad
Comment 1 2021-04-01 15:49:44 PDT
Created attachment 424956 [details] crash log
Ryan Haddad
Comment 2 2021-04-01 15:50:10 PDT
Ryan Haddad
Comment 3 2021-04-01 15:50:20 PDT
Eric Hutchison
Comment 4 2021-06-28 13:43:14 PDT
*** Bug 227457 has been marked as a duplicate of this bug. ***
Eric Hutchison
Comment 5 2021-07-07 10:25:54 PDT
Created attachment 433042 [details] Updated Test Expectations
Ryan Haddad
Comment 6 2021-07-07 10:52:33 PDT
Comment on attachment 433042 [details] Updated Test Expectations Clearing flags on attachment: 433042 Committed r279649 (239462@main): <https://commits.webkit.org/239462@main>
Jean-Yves Avenard [:jya]
Comment 7 2021-07-29 21:27:52 PDT
EWS
Comment 8 2021-07-30 15:38:35 PDT
Committed r280500 (240132@main): <https://commits.webkit.org/240132@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434603 [details].
Note You need to log in before you can comment on or make changes to this bug.