REGRESSION (r274460?): Infinite recursion on fullscreen/full-screen-remove-ancestor.html in WTR::InjectedBundlePage::closeFullScreen https://bugs.webkit.org/show_bug.cgi?id=224085 rdar://75576840

Reviewed by Eric Carlson.

Source/WebKit:

WebFullScreenManager::close() is used to cleanup a transient error when exiting or
attempting to exit fullscreen; it then calls InjectedBundleXXX::closeFullScreen().
It is possible for the injected bundle's closeFullScreen() to attempt to exit full
screen mode again.
Rather than making the bundle responsible for doing the right thing, we add a
workaround in the fullscreen manager to ensure no recursion is happening.

Covered by existing test.

* WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::WebFullScreenManager::close):
* WebProcess/FullScreen/WebFullScreenManager.h: Make close() method private

LayoutTests:

* platform/mac-wk2/TestExpectations: re-enable test.


Canonical link: https://commits.webkit.org/240132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280500 268f45cc-cd09-0410-ab3c-d52691b4dbfc